--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGame
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.RecastNavMesh]
-bDrawPolyEdges=False
+bDrawPolyEdges=True
 bDistinctlyDrawTilesBeingBuilt=True
 DrawOffset=10.000000
 bFixedTilePoolSize=False
